# autodb

./: .gitignore  README.md  example.py  exmaple.py  pyproject.toml  readme.md
.github/workflows/: ci.yml
autodb/: datatypes.py  dbmodel.py  exceptions.py  migrations.py  serialization.py  sqlite.py
pwdantic/: datatypes.py  exceptions.py  migrations.py  pwdantic.py  serialization.py  sqlite.py
src/dbtogo/: datatypes.py  dbmodel.py  exceptions.py  migrations.py  serialization.py  sqlite.py
tests/: basic.py  edges.py  migrations.py  test_crud.py  test_exceptions.py  test_identity.py  test_migration.py  todo_test_roadmap.txt
